--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,11 @@ spring:
   datasource:
     username: azc_jjzd
     password: azc_conn
+    #    username: root
+    #    password: 19980413.com
     url: jdbc:mysql://chenshiqi.mysql.rds.aliyuncs.com:3306/azc_zb_exist_error_device?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull
+#    url: jdbc:mysql://localhost:3306/azc_zb_exist_error_device?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull
+
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
 
